fixed: overlay z-index

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -239,6 +239,7 @@ a:focus-visible {
 .overlay {
   position: fixed;
   inset: 0;
+  z-index: 1;
   width: 100%;
   height: 100%;
   background: transparent;
